--- a/core/Makefile
+++ b/core/Makefile
@@ -1981,15 +1981,15 @@ otapackage: $(INTERNAL_OTA_PACKAGE_TARGET)
 bacon: otapackage
 	$(hide) ln -f $(INTERNAL_OTA_PACKAGE_TARGET) $(TARGET_PACKAGE)
 	$(hide) $(MD5SUM) $(TARGET_PACKAGE) > $(TARGET_PACKAGE).md5sum
-	@echo -e ${CL_BLD}${CL_CYN}"===============================-Package complete-==============================="${CL_RST}
-	@echo -e ${CL_BLD}${CL_YLW}"Zip: "${CL_YLW} $(TARGET_PACKAGE)${CL_RST}
-	@echo -e ${CL_BLD}${CL_YLW}"MD5: "${CL_YLW}" `cat $(TARGET_PACKAGE).md5sum | cut -d ' ' -f 1`"${CL_RST}
+	@echo "===============================-Package complete-==============================="
+	@echo "Zip: " $(TARGET_PACKAGE)
+	@echo "MD5:  `cat $(TARGET_PACKAGE).md5sum | cut -d ' ' -f 1`"
 ifeq ($(HOST_OS),darwin)
-	@echo -e ${CL_BLD}${CL_YLW}"Size:"${CL_YLW}" `ls -lah $(TARGET_PACKAGE) | cut -d ' ' -f 9`"${CL_RST}
+	@echo "Size: `ls -lah $(TARGET_PACKAGE) | cut -d ' ' -f 9`"
 else
-	@echo -e ${CL_BLD}${CL_YLW}"Size:"${CL_YLW}" `ls -lah $(TARGET_PACKAGE) | cut -d ' ' -f 5`"${CL_RST}
+	@echo "Size:"${CL_YLW}" `ls -lah $(TARGET_PACKAGE) | cut -d ' ' -f 5`"
 endif
-	@echo -e ${CL_BLD}${CL_CYN}"================================================================================"${CL_RST}
+	@echo "================================================================================"
 
 endif    # build_ota_package
 
